storing generated list of word combinations in a file on disk